fixed JSON package to be less similar to sourcecode, "todolist" and baeldung https://www.baeldung.com/jackson-object-mapper-tutorial, removed unnecessary code.